apps/default/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: homepage-ui
    annotations:
        kubernetes.io/ingress.class: traefik-internal
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:KYagkTrY/Lya2vnwKEtMvVXrfwjWr6wBpLMYwQ==,iv:8RmkXjjbhVOmqbwKj8ZBNsXs9mnbwyVSXVuQYZouFMU=,tag:tPGcE2A02LjkWqSuEBIKPA==,type:str]
          kind: Rule
          services:
            - name: homepage
              port: 3000
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1r3ehz4v5czfczcmfgnyuc7zmz8pjl055shhek88nsjv2xnrnkq8svjnj5c
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwVlFoWUo1cFdlWm12VVVB
[...]
            BqJvDt6JkuYUapz642iHRwLlY4N6AvW3WR47MkgVi7Oy25OK00lauA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-20T04:11:54Z"
    mac: ENC[AES256_GCM,data:KyFNNj5JQ1tk2XybGD3nQqxnw2XU9LYZSBjc2gWWh0nK2pNVVx/k/aatAU8Fp4SfufQ/hwC8brlOx55W70OElgI7Of5rynCdCB461bAJVblLdWaTuC8HaGju+PwfQhTes9M1+t8SwDvvW7Qur8he/Rwbr/FbvrSjJDVxxJz/0XY=,iv:UZa1kiapRnXFekiMOmV6x/TbsVkxKaVz/UGZvIhYOwY=,tag:OTv2Ui4/r592CgmBRJB/rg==,type:str]
    pgp: []
    encrypted_regex: ^(match)$
    version: 3.9.1
